--- a/README.html
+++ b/README.html
@@ -91,7 +91,7 @@
           : 'default'
     });
   </script>
-<p>Watchaで記録した自分のデータをcsv型式でバックアップ、取り出します。</p>
+<p>Watchaで記録した自分のデータをcsv形式でバックアップ、取り出します。</p>
 <h2 id="%E4%BD%BF%E3%81%84%E6%96%B9">使い方</h2>
 <ol>
 <li>各スクリプトに自分のIDやパスを書き込む</li>
